recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:3: error: not found: value list
	return list.head 
               ^nth:4: error: type mismatch;
 found   : (List[Int], Int)
 required: Int
	return (l.tail,n-1)
               ^